#257: flickering stop-gap fix, move drag-drop from row.js to utils.js

--- a/packages/perspective-viewer/src/less/computed_column.less
+++ b/packages/perspective-viewer/src/less/computed_column.less
@@ -203,6 +203,7 @@
 
             perspective-row {
                 display: none !important;
+                pointer-events: none;
             }
         }
 
